tests/flow/stmt_after_exit.smt2
(set-logic ALL)
(exit)
(echo "foobar")
